--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "netlifyreact",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://whispering-basin-81140.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
